Name:             revision
Version:          0.3
License:          BSD3
Author:           david@seereason.com
Maintainer:       partners@seereason.com

Synopsis:         Modules for revision control and merging
Description:      Modules for revision control and merging.

Exposed-Modules:  Data.IxSet.POSet, Data.IxSet.Revision, Data.IxSet.Revision.Old1,
                  Data.IxSet.Revision.Current, Data.IxSet.Revision.Instances, Data.IxSet.Merge,
		  Data.IxSet.Store, Data.IxSet.Triplets, Data.IxSet.Extra
                  
Build-Depends:    base >= 4, containers, mtl, syb, syb-with-class, text, bytestring, applicative-extras,
                  happstack-data, happstack-state, HUnit, ixset, utf8-string

Build-Type:       Simple
Category:         Web, Language
Extensions:             FlexibleContexts,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        OverlappingInstances,
                        UndecidableInstances
