Name:             revision
Version:          0.8.1
License:          BSD3
Author:           david@seereason.com
Maintainer:       partners@seereason.com

Synopsis:         Modules for revision control and merging
Description:      Modules for revision control and merging.

Exposed-Modules:  Data.IxSet.POSet, Data.IxSet.Revision,
                  Data.IxSet.Revision.Current, Data.IxSet.Revision.Instances, Data.IxSet.Merge,
		  Data.IxSet.Store, Data.IxSet.Triplets, Data.IxSet.Extra

Build-Depends:    applicative-extras,
                  base >= 4,
                  bytestring,
                  containers,
                  HUnit,
                  ixset,
                  mtl,
                  pretty,
                  safecopy,
                  syb,
                  text,
                  utf8-string

Build-Type:       Simple
Category:         Web, Language
Extensions:             FlexibleContexts,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        OverlappingInstances,
                        UndecidableInstances
